apps/production/patchmon/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: patchmon
spec:
  selector:
    app: patchmon-database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
