apps/production/patchmon/guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: patchmon
spec:
  selector:
    app: patchmon-guacd
  ports:
    - name: guacd
      port: 4822
      targetPort: guacd
      protocol: TCP
