apps/production/patchmon/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patchmon
  namespace: patchmon
spec:
  selector:
    app: patchmon-server
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
