apps/production/patchmon/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: patchmon
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: patchmon-http
  namespace: patchmon
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`patchmon.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: patchmon
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: patchmon
  namespace: patchmon
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`patchmon.turtleware.au`)
      kind: Rule
      services:
        - name: patchmon
          port: 3000
  tls:
    secretName: patchmon-tls
